--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.3.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "pug": "^3.0.3",
     "uuid": "^13.0.0"
